Tue Mar 14 05:32:38 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/Array_Traits_T.h (copy_range):

          Made this trait method a member template to provide support for
          checked destination iterators.

Tue Mar 13 20:05:54 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Simple_Naming/client.h:
        * orbsvcs/tests/Simple_Naming/client.cpp:

          Modified this test to use explicit activation to support
          CORBA e compact.                                    

Tue Mar 13 18:42:44 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/Throughput/Receiver_Factory.cpp:

          Modified this performance-test to use explicit activation to
          support CORBA e compact.

Tue Mar 13 18:24:27 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * examples/PluggableUDP/tests/Basic/client.cpp:
        * examples/PluggableUDP/tests/Basic/server.cpp:
        * examples/Simple/grid/Grid_i.cpp:
        * examples/Simple/time-date/Time_Date.cpp:
        * performance-tests/Cubit/TAO/MT_Cubit/Cubit_Task.cpp:
        * performance-tests/Latency/Single_Threaded/server.cpp:
        * performance-tests/Latency/Thread_Per_Connection/server.cpp:
        * performance-tests/Latency/Thread_Pool/server.cpp:
        * performance-tests/POA/Object_Creation_And_Registration/registration.cpp:
        * performance-tests/Sequence_Latency/Single_Threaded/server.cpp:
        * performance-tests/Sequence_Latency/Thread_Per_Connection/server.cpp:
        * performance-tests/Sequence_Latency/Thread_Pool/server.cpp:
        * performance-tests/Throughput/Throughput.mpc:
        * performance-tests/Throughput/server.cpp:
        * tests/AMH_Exceptions/server.cpp:
        * tests/AMH_Oneway/server.cpp:
        * tests/AMI/server.cpp:
        * tests/AMI/simple_client.cpp:
        * tests/AMI_Buffering/admin.cpp:
        * tests/AMI_Buffering/client.cpp:
        * tests/AMI_Buffering/server.cpp: